finish frontend and make animations

--- a/post_page.html
+++ b/post_page.html
@@ -212,11 +212,66 @@
                     <button class="btn btn-info btn-md">Post
                     </button>
                   </div>
-
                 </form>
               </div>
             </div>
         </div>
+
+        <div class="col-md-4 mb-4">
+          <div class="card peach-gradient mb-4 wow fadein">
+            <div class="card-body text-white text-center">
+              <h4 class="mb-4">
+                Lorem ipsum dolor sit.
+              </h4>
+              <p>
+                <strong>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                 Itaque ducimus nostrum obcaecati quasi debitis asperiores.
+              </strong>
+            </p>
+            <p class="mb-4">
+              <strong>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+               Itaque ducimus nostrum obcaecati quasi debitis asperiores.
+               Lorem ipsum dolor sit amet.
+            </strong>
+          </p>
+              <a href="#" class="btn btn-outline-white btn-md">
+                Start
+                <i class="fa fa-graduation-cap ml-2"></i>
+              </a>
+            </div>
+          </div>
+
+           <div class="card mb-4 text-center wow fadeIn">
+             <div class="card-header">Lorem ipsum dolor.</div>
+             <div class="card-body">
+               <form>
+                 <label class="grey-text">
+                   your email
+                 </label>
+                 <input type="email" class="form-control">
+
+                 <br>
+
+                 <label class="grey-text">
+                   your name
+                 </label>
+                 <input type="text" class="form-control">
+
+                 <div class="text-center mt-4">
+                   <button class="btn btn-info btn-md">
+                     Sign up
+                   </button>
+                 </div>
+               </form>
+             </div>
+           </div>
+
+
+
+        </div>
+
       </div>
     </section>
   </div>
@@ -253,6 +308,9 @@
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
+  <script>
+    new WOW.init()
+  </script>
 </body>
 
 </html>
